--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,9 @@ body, html{
     height: 100vh;
     width: 100vw;
 }
+::-webkit-scrollbar{
+    display: none;
+}
 #root{
     height: 100%;
     width: 100%;
