--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,7 @@ body, html{
     display: block;
 }
 #testimonial{
-    background-image: url('https://i0.wp.com/picjumbo.com/wp-content/uploads/beautiful-autumn-nature-with-trees-of-yellow-leaves-free-image.jpeg?w=600&quality=80');
+    background-image: url('https://img.freepik.com/premium-photo/snowy-mountain-peak-starry-galaxy-majesty-generative-ai_188544-9650.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
