--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,10 +25,10 @@ body, html{
     overflow-x: hidden;
     overflow-y: scroll;
     position: relative;
-    background-image: url('./assets/hero.gif');
+    background-image: url('./assets/hero.webp');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 .navLinks.active::after{
     content: '';
@@ -47,8 +47,9 @@ body, html{
     display: block;
 }
 #testimonial{
-    background-image: url('https://img.freepik.com/premium-photo/snowy-mountain-peak-starry-galaxy-majesty-generative-ai_188544-9650.jpg');
+    background-image: url('https://img.freepik.com/free-photo/front-view-back-school-concept-with-copy-space_23-2148559696.jpg?ga=GA1.1.519495728.1737608653&semt=ais_hybrid');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment:scroll;
+    background-position: bottom;
 }
